[package]
name = "xcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking", "json"]}
serde = { version = "1.0.228", features = ["derive"] }
textplots = "0.8.7"
