[package]
name = "xcheck"
version = "1.0.0"
description = "Currency exchange rates right in your terminal"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking", "json"]}
serde = { version = "1.0.228", features = ["derive"] }
textplots = "0.8.7"
